# slot

./: .gitignore  .gitmodules  .graphqlrc.yml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  EULA.md  Makefile  README.md  RPC_COMMANDS.md  delete.sh  dope.json  dope2.json  pirate.json  schema.json  snapshot_array.json  snapshot_everai.json  snapshot_ukn.json  test_contracts_config.json  test_merkle_drop.json  test_rewards_config.json
.agents/skills/slot-development/: SKILL.md
.agents/skills/slot-development/agents/: openai.yaml
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  e2e.yml  lint.yml  release-dispatch.yml  release.yml  schema-sync.yml
cli/: Cargo.toml
cli/src/: main.rs
cli/src/command/: mod.rs
cli/src/command/auth/: billing.rs  email.rs  fund.rs  info.rs  login.rs  mod.rs  session.rs  token.rs  transfer.rs
cli/src/command/deployments/: accounts.rs  create.rs  delete.rs  describe.rs  fork.rs  list.rs  logs.rs  mod.rs  transfer.rs  update.rs
cli/src/command/deployments/services/: katana.rs  mod.rs  saya.rs  torii.rs
cli/src/command/deployments/tests/: logs_test.rs  mod.rs
cli/src/command/merkle_drops/: build.rs  create.rs  mod.rs  process.rs  snapshot.rs
cli/src/command/paymaster/: budget.rs  create.rs  dune.rs  get.rs  info.rs  list.rs  mod.rs  policy.rs  stats.rs  transactions.rs  update.rs  utils.rs
cli/src/command/paymaster/dune/: dune.sql  exact.sql  fast.sql  mod.rs
cli/src/command/paymaster/templates/: dune_query.sql
cli/src/command/paymasters/: list.rs
cli/src/command/rpc/: logs.rs  mod.rs  tokens.rs  whitelist.rs
cli/src/command/rpc/tokens/: create.rs  delete.rs  list.rs
cli/src/command/rpc/whitelist/: add.rs  list.rs  remove.rs
cli/src/command/teams/: create.rs  delete.rs  invoices.rs  list.rs  members.rs  mod.rs  update.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs
crates/cli/src/auth/: email.rs  fund.rs  info.rs  login.rs  mod.rs  session.rs  token.rs  transfer.rs
crates/cli/src/deployments/: accounts.rs  create.rs  delete.rs  describe.rs  list.rs  logs.rs  mod.rs  transfer.rs  update.rs
crates/cli/src/deployments/services/: mod.rs
crates/cli/src/merkle_drops/: create.rs  mod.rs  snapshot.rs
crates/cli/src/paymaster/: budget.rs  create.rs  info.rs  policy.rs  stats.rs  transactions.rs  update.rs  utils.rs
crates/cli/src/paymaster/dune/: dune.sql  mod.rs
crates/cli/src/paymasters/: list.rs  mod.rs
crates/cli/src/teams/: create.rs  delete.rs  invoices.rs  members.rs  mod.rs  update.rs
crates/core/: Cargo.toml
crates/core/src/: account.rs  bigint.rs  credentials.rs  error.rs  lib.rs  preset.rs  version.rs
crates/graphql/: Cargo.toml  schema.json
crates/graphql/src/: api.rs  lib.rs
crates/graphql/src/auth/: mod.rs  transfer.graphql  update-me.graphql
crates/graphql/src/deployments/: accounts.graphql  accounts.rs  create.graphql  create.rs  delete.graphql  delete.rs  describe.graphql  describe.rs  list.rs  logs.rs  mod.rs  transfer.graphql  transfer.rs  update.rs
crates/graphql/src/merkle_drop/: create.graphql  mod.rs
crates/graphql/src/paymaster/: add_policies.graphql  create.graphql  list_paymasters.graphql  list_policies.graphql  mod.rs  remove_all_policies.graphql  stats.graphql  transaction.graphql
crates/graphql/src/team/: create.graphql  delete.graphql  invoices.graphql  members.graphql  mod.rs
crates/session/: Cargo.toml
crates/session/src/: lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs  starknet.rs
docs/: merkle_drop.md  paymaster.md
katana-genesis/: Cargo.toml
katana-genesis/src/: lib.rs
scripts/: clippy.sh  e2e.sh  pull_schema.sh  test-capacity.sh
slot/: Cargo.toml  schema.json
slot/src/: account.rs  api.rs  bigint.rs  browser.rs  credential.rs  error.rs  eula.rs  lib.rs  merkle.rs  preset.rs  presets.rs  read.rs  server.rs  session.rs  utils.rs  vars.rs  version.rs
slot/src/api/: auth.rs  mod.rs
slot/src/graphql/: mod.rs  paymaster.graphql  paymaster.rs
slot/src/graphql/auth/: info.graphql  info.rs  mod.rs  update-me.graphql
slot/src/graphql/deployments/: accounts.graphql  create.graphql  create.rs  describe.graphql  describe.rs  fork.rs  list.graphql  logs.graphql  mod.rs  transfer.graphql  transfer.rs  update.graphql  update.rs
slot/src/graphql/merkle_drop/: create.graphql  mod.rs
slot/src/graphql/paymaster/: add_policies.graphql  create.graphql  decrease_budget.graphql  increase_budget.graphql  info.graphql  list_policies.graphql  mod.rs  remove_policies.graphql  remove_policy.graphql  update.graphql
slot/src/graphql/rpc/: add_whitelist_origin.graphql  create_token.graphql  delete_token.graphql  list_tokens.graphql  list_whitelist_origins.graphql  logs.graphql  mod.rs  remove_whitelist_origin.graphql
slot/src/graphql/team/: create.graphql  mod.rs  teams.graphql  update.graphql
slotup/: README.md  install  slotup
src/: api.rs  browser.rs  cli.rs  command.rs  constant.rs  constants.rs  credential.rs  lib.rs  main.rs  server.rs  session.rs  utils.rs
src/command/: auth.rs
src/command/auth/: info.graphql  info.rs  login.rs  mod.rs
src/command/deployment/: create.graphql  create.rs  describe.graphql  describe.rs  list.graphql  list.rs  logs.graphql  logs.rs  mod.rs
src/command/deployment/configs/: katana.rs  madara.rs  mod.rs  torii.rs
src/command/deployment/services/: madara.rs  mod.rs  torii.rs
src/command/deployments/: accounts.graphql  accounts.rs  create.graphql  create.rs  delete.graphql  delete.rs  describe.graphql  describe.rs  fork.graphql  fork.rs  list.graphql  list.rs  logs.graphql  logs.rs  mod.rs  update.graphql  update.rs
src/command/deployments/services/: katana.rs  madara.rs  mod.rs  torii.rs
src/command/teams/: members.rs
src/graphql/: mod.rs
src/graphql/auth/: mod.rs
src/graphql/deployments/: accounts.rs  delete.rs  describe.rs  list.rs  logs.rs  update.graphql
