[workspace]
resolver = "2"
members = ["cli", "slot"]

[workspace.package]
version = "0.14.1"
license-file = "LICENSE"
repository = "https://github.com/cartridge-gg/slot/"
edition = "2021"
rust-version = "1.76.0"

[workspace.dependencies]
slot = { path = "slot" }

anyhow = "1.0.75"
axum = "0.7"
graphql_client = "0.13.0"
hyper = "1.4"
tokio = { version = "1.18.2", features = ["full", "sync"] }
serde = "1"
serde_json = "1"
thiserror = "1.0.32"
url = "2.2.2"
rand = "0.8.4"

# Must be synced across all downstream crates
starknet = "0.11.0"
starknet-types-core = "~0.1.4"

[patch.crates-io]
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs", rev = "2ddc694" }
starknet-types-core = { git = "https://github.com/starknet-io/types-rs", rev = "f98f048" }
