[workspace]
resolver = "2"
members = [
	"bin/slot",
	"crates/cli",
	"crates/graphql",
	"crates/session",
	"crates/core",
	"crates/utils",
]

[workspace.package]
version = "0.49.1"
license-file = "LICENSE"
repository = "https://github.com/cartridge-gg/slot/"
edition = "2021"
rust-version = "1.76.0"

[workspace.dependencies]
slot-cli = { path = "crates/cli" }
slot-session = { path = "crates/session" }
slot-graphql = { path = "crates/graphql" }
slot-utils = { path = "crates/utils" }
slot-core = { path = "crates/core" }

clap = { version = "4.2", features = ["derive"] }
starknet = "0.17.0"
starknet-types-core = "0.2"
base64 = "0.22.1"
reqwest = { version = "0.12", default-features = false, features = [
	"rustls-tls",
	"json",
] }
update-informer = { version = "1.1", default-features = false, features = [
	"ureq",
	"github",
	"rustls-tls",
] }
cainome-cairo-serde = "0.4.0"
starknet-signers = "0.14.0"
tower-http = "0.5"
anyhow = "1.0.75"
axum = "0.7"
graphql_client = "0.13.0"
hyper = "1.4"
tokio = { version = "1.18.2", features = ["full", "sync"] }
serde = "1"
serde_json = "1.0"
thiserror = "1.0.32"
url = "2.2.2"
dirs = "5"
tempfile = "3.10"
num-bigint = "0.4.3"
tracing = "0.1"
