[workspace]
resolver = "2"
members = ["cli", "slot"]

[workspace.package]
version = "0.55.0"
license-file = "LICENSE"
repository = "https://github.com/cartridge-gg/slot/"
edition = "2021"
rust-version = "1.76.0"

[workspace.dependencies]
slot = { path = "slot" }

anyhow = "1.0.100"
axum = "0.8"
graphql_client = "0.14.0"
hyper = "1.4"
tokio = { version = "1.18.2", features = ["full", "sync"] }
serde = "1"
serde_json = "1.0.145"
thiserror = "1.0.32"
url = "2.2.2"
starknet = "0.14.0"
num-bigint = "0.4.3"
