[package]
name = "slot-cli"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap = { version = "4.2", features = ["derive"] }
colored = "2.0.0"
ctrlc = "3.4.1"
dialoguer = "0.11.0"
env_logger = "0.10"
log = "0.4"
graphql_client.workspace = true
torii-cli = { git = "https://github.com/dojoengine/torii", tag = "v1.5.3", default-features = false }

katana-primitives = { git = "https://github.com/dojoengine/katana", tag = "v1.5.1" }
katana-cli = { git = "https://github.com/dojoengine/katana", tag = "v1.5.1" }

hyper.workspace = true
tokio.workspace = true
thiserror.workspace = true
serde.workspace = true
slot.workspace = true
starknet.workspace = true
toml = "0.8"
url.workspace = true
strum_macros = "0.25.3"

[[bin]]
name = "slot"
path = "src/main.rs"
