[package]
name = "slot-cli"
version = "0.44.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.2", features = ["derive"] }
colored = "2.0.0"
ctrlc = "3.4.1"
dialoguer = "0.11.0"
env_logger = "0.11.3"
log = "0.4"
graphql_client.workspace = true
torii-cli = { git = "https://github.com/dojoengine/dojo", branch = "torii-sqlite-types", default-features = false }

# Revision that includes the `config` field being public.
# Should be bumped once a new version is released with this commit:
# <https://github.com/dojoengine/katana/commit/d9514a9996c51bd8083da9b7fd1029a41480cfdd>
katana-primitives = { git = "https://github.com/dojoengine/katana", rev = "d9514a9" }
katana-cli = { git = "https://github.com/dojoengine/katana", rev = "d9514a9", default-features = false, features = [
	"cartridge",
] }

comfy-table = "7.1"
hyper.workspace = true
num-bigint = { version = "0.4", features = ["serde"] }
tokio.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json = "1.0"
slot.workspace = true
starknet.workspace = true
toml = "0.8"
url.workspace = true
strum_macros = "0.25.3"
update-informer = { version = "1.1", default-features = false, features = [
	"ureq",
	"github",
] }

[[bin]]
name = "slot"
path = "src/main.rs"

[features]
default = []
