[package]
name = "slot-cli"
version = "0.56.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
colored = "2.0.0"
ctrlc = "3.5.1"
dialoguer = "0.11.0"
ethers = { version = "2.0", default-features = false, features = ["abigen", "rustls"] }
futures = "0.3"
env_logger = "0.11.3"
log = "0.4"
graphql_client.workspace = true

comfy-table = "7.2"
hyper.workspace = true
num-bigint = { version = "0.4", features = ["serde"] }
tokio.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json = "1.0"
slot.workspace = true
starknet.workspace = true
url.workspace = true
strum_macros = "0.27.1"
update-informer = { version = "1.3", default-features = false, features = [
	"ureq",
	"github",
] }
reqwest = "0.12.12"

[[bin]]
name = "slot"
path = "src/main.rs"

[features]
default = []
