[package]
name = "slot-katana-genesis"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
katana-primitives.workspace = true
account-sdk = { git = "https://github.com/cartridge-gg/controller", branch = "main" }
anyhow.workspace = true
lazy_static = "1.4.0"
starknet.workspace = true
serde_json.workspace = true
starknet-crypto = "0.6.2"
alloy-primitives = "0.7.4"
sha2 = "0.10"
base64 = "0.22.1"
coset = "0.3.7"
