[package]
edition.workspace = true
name = "slot-katana-genesis"
version.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
account-sdk.workspace = true
alloy-primitives = "0.7.4"
anyhow.workspace = true
base64 = "0.22.1"
coset = "0.3.7"
katana-primitives.workspace = true
lazy_static = "1.4.0"
serde_json.workspace = true
sha2 = "0.10"
starknet-crypto = "0.6.2"
starknet.workspace = true
