[package]
edition.workspace = true
name = "slot-katana-genesis"
version.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
account-sdk.workspace = true
anyhow.workspace = true
base64 = "0.22.1"
coset = "0.3.7"
katana-primitives.workspace = true
serde_json.workspace = true
starknet.workspace = true
