[package]
name = "slot"
version.workspace = true
edition.workspace = true
license-file.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
cainome-cairo-serde = "0.2.0"
dirs = "5"
graphql_client.workspace = true
reqwest = { version = "0.12", default-features = false, features = [
	"rustls-tls",
	"json",
] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1.34"
urlencoding = "2"
webbrowser = "0.8"
starknet.workspace = true
url.workspace = true
tempfile = "3.10.1"
hyper.workspace = true
# https://github.com/cartridge-gg/controller/pull/1549
account_sdk = { git = "https://github.com/cartridge-gg/controller", rev = "05fe96f4" }
base64 = "0.22.1"
colored = "2.0.0"
num-bigint = { version = "0.4.6", features = [ "serde" ] }
update-informer = { version = "1.1", default-features = false, features = ["ureq", "github", "rustls-tls"] }
which = "5.0.0"

[dev-dependencies]
assert_matches = "1.5.0"
