[package]
name = "slot"
version.workspace = true
edition.workspace = true
license-file.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
cainome-cairo-serde = { git = "https://github.com/cartridge-gg/cainome", branch = "types-rs-100-blake2s" }
dirs = "6"
graphql_client.workspace = true
reqwest = { version = "0.12", default-features = false, features = [
	"rustls-tls",
	"json",
] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1.34"
urlencoding = "2"
webbrowser = "1.0"
starknet.workspace = true
url.workspace = true
tempfile = "3.23.0"
hyper.workspace = true
account_sdk = { git = "https://github.com/cartridge-gg/controller-rs", branch = "types-rs-100-blake2s" }
base64 = "0.22.1"
colored = "2.0.0"
num-bigint = { version = "0.4.6", features = ["serde"] }
update-informer = { version = "1.3", default-features = false, features = [
	"ureq",
	"github",
	"rustls-tls",
] }
which = "7.0.2"
dialoguer = "0.11.0"
regex = "1.12"

[dev-dependencies]
assert_matches = "1.5.0"
