[package]
name = "slot-cli"
version = "0.49.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slot-core.workspace = true
slot-utils.workspace = true
slot-session.workspace = true
slot-graphql.workspace = true

anyhow.workspace = true
axum.workspace = true
chrono = { version = "0.4", features = ["serde"] }
clap.workspace = true
colored = "2.0.0"
ctrlc = "3.4.1"
dialoguer = "0.11.0"
ethers = { version = "2.0", default-features = false, features = [
	"abigen",
	"rustls",
] }
futures = "0.3"
log = "0.4"
graphql_client.workspace = true
torii-cli = { git = "https://github.com/dojoengine/dojo", branch = "torii-sqlite-types", default-features = false }

# Revision that includes the `config` field being public.
# Should be bumped once a new version is released with this commit:
# <https://github.com/dojoengine/katana/commit/d9514a9996c51bd8083da9b7fd1029a41480cfdd>
katana-primitives = { git = "https://github.com/dojoengine/katana", rev = "d615ff05" }
katana-cli = { git = "https://github.com/dojoengine/katana", rev = "d615ff05", default-features = false, features = [
	"cartridge",
] }

comfy-table = "7.1"
hyper.workspace = true
num-bigint = { version = "0.4", features = ["serde"] }
tokio.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json = "1.0"
starknet.workspace = true
starknet-types-core.workspace = true
toml = "0.8"
url.workspace = true
strum_macros = "0.25.3"

[features]
default = []
