[package]
name = "slot-graphql"
version.workspace = true
license-file.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
slot-utils.workspace = true
slot-core.workspace = true

graphql_client.workspace = true
anyhow.workspace = true
thiserror.workspace = true
url.workspace = true
serde.workspace = true
reqwest.workspace = true
serde_json.workspace = true
starknet-types-core.workspace = true
