[package]
name = "slot-session"
version.workspace = true
license-file.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
slot-core.workspace = true
slot-utils.workspace = true

# https://github.com/cartridge-gg/controller-rs/pull/45
account_sdk = { git = "https://github.com/cartridge-gg/controller-rs", rev = "68aa627f402af2f18e09a53b62cb8a4bc39bb5c8" }
hyper.workspace = true
cainome-cairo-serde.workspace = true
axum.workspace = true
serde.workspace = true
starknet-signers.workspace = true
starknet-types-core.workspace = true
tracing.workspace = true
url.workspace = true
tokio.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tower-http = { workspace = true, features = ["cors", "trace"] }
reqwest.workspace = true
thiserror.workspace = true
urlencoding = "2"
base64.workspace = true

[dev-dependencies]
starknet.workspace = true
