[package]
name = "slot-utils"
version.workspace = true
license-file.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
regex = "1.10"
tempfile.workspace = true
dirs.workspace = true
axum.workspace = true
tokio.workspace = true
base64.workspace = true
tracing.workspace = true
anyhow.workspace = true
tower-http = { workspace = true, features = ["cors", "trace"] }
webbrowser = "0.8"
reqwest.workspace = true
