[package]
name = "slot-utils"
version.workspace = true
license-file.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
regex = "1.10"
tempfile.workspace = true
dirs.workspace = true
axum.workspace = true
thiserror.workspace = true
starknet-types-core.workspace = true
tokio.workspace = true
sha3 = "0.10.8"
base64.workspace = true
tracing.workspace = true
anyhow.workspace = true
tower-http = { workspace = true, features = ["cors", "trace"] }
webbrowser = "0.8"
reqwest.workspace = true

[features]
default = []
test_utils = []
